--- a/servlet/web/WEB-INF/web.xml
+++ b/servlet/web/WEB-INF/web.xml
@@ -4,4 +4,35 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
   <display-name>edu</display-name>
+  <servlet>
+    <servlet-name>initParam</servlet-name>
+    <servlet-class>com.edu.test.InitParamServlet</servlet-class>
+    <init-param>
+      <param-name>id</param-name>
+      <param-value>guest</param-value>
+    </init-param>
+    <init-param>
+      <param-name>password</param-name>
+      <param-value>1004</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>initParam</servlet-name>
+    <url-pattern>/initParamTest</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>servletConfigTest</servlet-name>
+    <servlet-class>com.edu.test.ServletConfigTestServlet</servlet-class>
+    <init-param>
+      <param-name>charset</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>servletConfigTest</servlet-name>
+    <url-pattern>/servletConfigTest</url-pattern>
+  </servlet-mapping>
 </web-app>
